# ProCharity_back_2.0

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  MIGRATIONS_GUIDE.md  README.md  alembic.ini  docker-compose.yaml  env.example  fill_db.py  pyproject.toml  requirements.txt  run.py  setup.cfg  test.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: deploy.yaml  deploy_prod.yaml  deploy_stage.yaml  healthcheck.yaml  push_front.yaml  test_push_front.yaml
infra/: Dockerfile_front  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.swag.yml  docker-pg.yml  swag_nginx.conf
infra/entrypoints/: prod.sh  staging.sh
infra/nginx/: nginx.local.conf  swag.conf  swag_nginx.conf
nginx/: default.conf
src/: __init__.py  admin_service_test.py  application.py  authentication.py  depends.py  main.py  run.py  run_api.py  run_bot.py  settings.py
src/api/: __init__.py  constants.py  events.py  fastapi_admin_users.py  main.py  pagination.py  permissions.py  router.py  schemas.py  utils.py
src/api/auth/: __init__.py  token.py
src/api/endpoints/: __init__.py  admin.py  admin_login.py  analytics.py  categories.py  category.py  constants.py  external_site_user.py  feedback.py  form.py  health_check.py  invintation.py  notification.py  task.py  tasks.py  tech_messages.py  telegram_webhook.py  users.py
src/api/schemas/: __init__.py  admin.py  analytics.py  base.py  categories.py  external_site_user.py  feedback.py  health_check.py  notification.py  site_user_categories.py  tasks.py  tech_messages.py  token_schemas.py  users.py
src/api/services/: __init__.py  admin_service.py  admin_token_request.py  analitics.py  analytics.py  base.py  category.py  create_invitation_token.py  external_site_user.py  health_check.py  messages.py  schemas.py  task.py  users.py
src/bot/: __init__.py  bot.py  buttons.py  constants.py  handlers.py  keyboards.py  main.py  schemas.py  services.py  utils.py  web_apps.py
src/bot/constaints/: callback_data.py
src/bot/constants/: callback_data.py  commands.py  enum.py  keyboards_const.py  patterns.py  states.py  urls.py
src/bot/handlers/: __init__.py  categories.py  decorators.py  feedback_form.py  form.py  menu.py  notifications.py  registration.py  tasks.py  user_messages.py
src/bot/schemas/: __init__.py  web_app_query_params.py
src/bot/services/: __init__.py  category.py  external_site_user.py  formatter.py  task.py  unsubscribe_reason.py  user.py
src/bot/templates/: feedback_form.html
src/core/: enums.py  logging.py  messages.py  pagination.py  utils.py
src/core/admin_auth/: backend.py  cookie_backend.py  fastapi_users.py
src/core/db/: __init__.py  db.py  models.py
src/core/depends/: __init__.py  api_services.py  applications.py  bot_services.py  container.py  (+6 more)
templates/email/: invitation_email.html  password_reset.html  send_question.html  unsubscribe_notification.html
templates/feedback_form/: feedback_form.html
templates/task_info_page/: task_info_page.html
(+126 files in other folders)
