[tool.poetry]
name = "procharity-back-2-0"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
    | .env
    | .env.example
    | .git
    | __pycache__
    | venv/
    | env/
    | .*/tests/*
    | .*/migrations/*
    | .*/migrations/*
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = ['src/core/db/migrations/',]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
python-telegram-bot = "^20.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
